--- a/Assignments/A01_Introduction.Rmd
+++ b/Assignments/A01_Introduction.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 1: Introduction"
-author: "Student Name"
+author: "Erika Munshi"
 output: pdf_document
 geometry: margin=2.54cm
 ---
@@ -22,21 +22,21 @@ The completed exercise is due on Tuesday, January 14th at 1:00 pm.
 
 1. What are your previous experiences with data analytics, R, and Git? Include both formal and informal training.
 
-> Answer: 
+> Answer: I've taken the Fundamentals Stats Course (R-based) as well as Dean Urban's Landscape Analysis class (R-based). I've also taken John Fay's Advanced GIS course which used Git and did some elementary coding in Python. I feel comfortable working in R but would like to learn more about coding in python and javascript (for Google Earth Engine)
 
 2. Are there any components of the course about which you feel confident?
 
-> Answer: 
+> Answer: I feel confident in my ability to import data and do basic data cleaning and modeling.
 
 3. Are there any components of the course about which you feel apprehensive?
 
-> Answer: 
+> Answer: I feel apprehensive about going back and forth between git and R studio because I am still trying to understand the structure behind the repositories and versioning. 
 
 
 ## 2) GitHub
 
 Provide a link below to your forked course repository in GitHub. Make sure you have pulled all recent changes from the course repository  and that you have updated your course README file. 
 
-> Answer: 
+> Answer: https://github.com/esm52/Environmental_Data_Analytics_2020.git
 
 
