push r markdown version of lesson 2

--- a/Lessons/02_Reproducibility_CodingBasics.Rmd
+++ b/Lessons/02_Reproducibility_CodingBasics.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "2: Reproducibility and Coding Basics"
-author: "Environmental Data Analytics | Kateri Salk"
+author: "Environmental Data Analytics | Erika Munshi"
 date: "Spring 2020"
 output: pdf_document
 geometry: margin=2.54cm
